test: lake: make 116 deterministic & related tweaks

--- a/src/shell/CMakeLists.txt
+++ b/src/shell/CMakeLists.txt
@@ -177,12 +177,14 @@ FOREACH(T ${LEANTESTS})
   endif()
 ENDFOREACH(T)
 
-# Create a lake test for each subdirectory of `lake` which contains a `test.sh` file.
+# Create a lake test for each test and examples subdirectory of `lake`
+# which contains a `test.sh` file, excluding the following test(s):
 # bootstrap: too slow
-# 116: non-deterministic (`sleep`)
-file(GLOB_RECURSE LEANLAKETESTS "${LEAN_SOURCE_DIR}/lake/test.sh")
+file(GLOB_RECURSE LEANLAKETESTS
+  "${LEAN_SOURCE_DIR}/lake/test/test.sh"
+  "${LEAN_SOURCE_DIR}/lake/examples/test.sh")
 FOREACH(T ${LEANLAKETESTS})
-  if(NOT T MATCHES ".*(lake-packages|bootstrap|116).*")
+  if(NOT T MATCHES ".*(lake-packages|bootstrap).*")
     GET_FILENAME_COMPONENT(T_DIR ${T} DIRECTORY)
     GET_FILENAME_COMPONENT(DIR_NAME ${T_DIR} NAME)
     add_test(NAME "leanlaketest_${DIR_NAME}"
