--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -283,6 +283,23 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  pr-release:
+    if: ${{ ! startsWith(github.ref, 'refs/tags/') }}   # TODO add  ' && ! needs.set-nightly.outputs.nightly'
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          path: artifacts
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: artifacts/*/*
+          fail_on_unmatched_files: true
+          draft: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   release-nightly:
     needs: [set-nightly, build]
     if: needs.set-nightly.outputs.nightly
