--- a/stage0/src/stdlib.make.in
+++ b/stage0/src/stdlib.make.in
@@ -22,6 +22,7 @@ LEANMAKE_OPTS=\
 	LEANC_OPTS+="${LEANC_OPTS}"\
 	LEAN_AR="${CMAKE_AR}"\
 	MORE_DEPS+="${PREV_STAGE}/bin/lean${CMAKE_EXECUTABLE_SUFFIX}"\
+	${EXTRA_LEANMAKE_OPTS}\
 	CMAKE_LIKE_OUTPUT=1
 
 ifeq "${STAGE}" "0"
