chore: limit the number of rebuilds

--- a/tests/bench/speedcenter.exec.velcom.yaml
+++ b/tests/bench/speedcenter.exec.velcom.yaml
@@ -116,6 +116,7 @@
       lake -Ktest=Clean clean
       lake -Ktest=Clean build
       "
+    max_runs: 2
   build_config:
     cmd: |
       bash -c "
