--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -67,3 +67,33 @@ jobs:
         env:
           # The token used here must have `workflow` privileges.
           GITHUB_TOKEN: ${{ secrets.PR_RELEASES_TOKEN }}
+
+      # We next automatically create a Mathlib branch using this toolchain.
+      # Mathlib CI will be responsible for reporting back success or failure
+      # to the PR comments asynchronously.
+      - name: Cleanup workspace
+        run: |
+          sudo rm -rf *
+
+      - name: Checkout mathlib4 repository
+        uses: actions/checkout@v2
+        with:
+          repository: leanprover-community/mathlib4
+          token: ${{ secrets.MATHLIB4_BOT }}
+          ref: master
+
+      - name: Create new branch
+        run: |
+          git checkout -b lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }}
+
+      - name: Update lean-toolchain
+        run: |
+          echo "leanprover/lean4-pr-releases:pr-release-${{ steps.workflow-info.outputs.pullRequestNumber }}" > lean-toolchain
+
+      - name: Commit and push changes
+        run: |
+          git config user.name "leanprover-community-mathlib4-bot"
+          git config user.email "leanprover-community-mathlib4-bot@users.noreply.github.com"
+          git add lean-toolchain
+          git commit -m "Update lean-toolchain for testing https://github.com/leanprover/lean4/pull/${{ steps.workflow-info.outputs.pullRequestNumber }}"
+          git push origin lean-pr-testing-${{ steps.workflow-info.outputs.pullRequestNumber }}
