feat: when making PR releases, only download necessary artifacts

--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -43,6 +43,8 @@ jobs:
         with:
           run_id: ${{ github.event.workflow_run.id }}
           path: artifacts
+          name: build-.*
+          name_is_regexp: true
       - name: Prepare release
         if: ${{ steps.workflow-info.outputs.pullRequestNumber != '' }}
         run: |
