feat: add toolchain-available labels to PRs

--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -70,6 +70,13 @@ jobs:
           # The token used here must have `workflow` privileges.
           GITHUB_TOKEN: ${{ secrets.PR_RELEASES_TOKEN }}
 
+      - name: Add label
+        if: ${{ steps.workflow-info.outputs.pullRequestNumber != '' }}
+        uses: actions-ecosystem/action-add-labels@v1
+        with:
+          number: ${{ steps.workflow-info.outputs.pullRequestNumber }}
+          labels: toolchain-available
+
       # We next automatically create a Mathlib branch using this toolchain.
       # Mathlib CI will be responsible for reporting back success or failure
       # to the PR comments asynchronously.
