chore: base lean-pr-testing-NNNN branches off nightly-testing

--- a/.github/workflows/pr-release.yml
+++ b/.github/workflows/pr-release.yml
@@ -90,7 +90,7 @@ jobs:
         with:
           repository: leanprover-community/mathlib4
           token: ${{ secrets.MATHLIB4_BOT }}
-          ref: master
+          ref: nightly-testing # This is more likely than `master` to work with the base of this PR.
           fetch-depth: 0
 
       - name: Check if branch exists
