are the help strings getting in the way of passing options down to stages?

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,10 +8,10 @@ if(NOT (DEFINED STAGE))
 endif()
 include(ExternalProject)
 project(LEAN CXX C)
-set(LEAN_VERSION_MAJOR 4 CACHE STRING "The major version number.")
-set(LEAN_VERSION_MINOR 0 CACHE STRING "The minor version number.")
-set(LEAN_VERSION_PATCH 0 CACHE STRING "The patch version number.")
-set(LEAN_VERSION_IS_RELEASE 0 CACHE STRING "1 for releases, 0 otherwise.")
+set(LEAN_VERSION_MAJOR 4 CACHE STRING)
+set(LEAN_VERSION_MINOR 0 CACHE STRING)
+set(LEAN_VERSION_PATCH 0 CACHE STRING)
+set(LEAN_VERSION_IS_RELEASE 0 CACHE STRING)
 set(LEAN_SPECIAL_VERSION_DESC "" CACHE STRING "Additional version description like 'nightly-2018-03-11'")
 set(LEAN_VERSION_STRING "${LEAN_VERSION_MAJOR}.${LEAN_VERSION_MINOR}.${LEAN_VERSION_PATCH}")
 if (LEAN_SPECIAL_VERSION_DESC)
